<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:title="@string/general">
        <menu>
            <item
                android:id="@+id/profile"
                android:icon="@drawable/profile"
                android:title="@string/profile" />
            <item
                android:id="@+id/sync"
                android:icon="@drawable/sync"
                android:title="@string/sync_now" />
        </menu>
    </item>
    <item android:title="@string/support">
        <menu>
            <item
                android:id="@+id/rating"
                android:icon="@drawable/rating"
                android:title="@string/rate_app" />
            <item
                android:id="@+id/share"
                android:icon="@drawable/ic_baseline_share_24"
                android:title="@string/share_app" />
        </menu>
    </item>
    <item android:title="@string/logout">
        <menu>
            <item
                android:id="@+id/logout"
                android:icon="@drawable/ic_baseline_vpn_key_24"
                android:title="@string/log_out" />
        </menu>
    </item>
</menu>